--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ name: Muhammad Murtaza
 description: Student Of Fast University Id:21k-4758
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/avatar.jpg
 
 
 footer-links:
