--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ avatar: https://raw.githubusercontent.com/murtazaHussainn/murtazaHussainn.github
 
 footer-links:
   email: k214758@nu.edu.pk
-  facebook:
+  facebook: murtazahussain
   github: murtazaHussainn/murtazaHussainn.github.io
-  instagram:
+  instagram: murtazahussain._
 
 
 
