--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ avatar: https://raw.githubusercontent.com/murtazaHussainn/murtazaHussainn.github
 
 footer-links:
   email: k214758@nu.edu.pk
-  facebook: murtazahussain
+  facebook: https://www.facebook.com/murtaza.hussain.1675/
   github: murtazaHussainn/murtazaHussainn.github.io
   instagram: murtazahussain._
 
